y.output
Grammar

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 line: expression CR
    4     | error CR

    5 expression: term
    6           | expression ADD term
    7           | expression SUB term

    8 term: primary_expression
    9     | term MUL primary_expression
   10     | term DIV primary_expression

   11 primary_expression: DOUBLE_LITERAL


Terminals, with rules where they appear

$end (0) 0
error (256) 4
DOUBLE_LITERAL (258) 11
ADD (259) 6
SUB (260) 7
MUL (261) 9
DIV (262) 10
CR (263) 3 4


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
line_list (10)
    on left: 1 2, on right: 0 2
line (11)
    on left: 3 4, on right: 1 2
expression (12)
    on left: 5 6 7, on right: 3 6 7
term (13)
    on left: 8 9 10, on right: 5 6 7 9 10
primary_expression (14)
    on left: 11, on right: 8 9 10


state 0

    0 $accept: . line_list $end

    error           shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2

    line_list           go to state 3
    line                go to state 4
    expression          go to state 5
    term                go to state 6
    primary_expression  go to state 7


state 1

    4 line: error . CR

    CR  shift, and go to state 8


state 2

   11 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 11 (primary_expression)


state 3

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end            shift, and go to state 9
    error           shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2

    line                go to state 10
    expression          go to state 5
    term                go to state 6
    primary_expression  go to state 7


state 4

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


state 5

    3 line: expression . CR
    6 expression: expression . ADD term
    7           | expression . SUB term

    ADD  shift, and go to state 11
    SUB  shift, and go to state 12
    CR   shift, and go to state 13


state 6

    5 expression: term .
    9 term: term . MUL primary_expression
   10     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 5 (expression)


state 7

    8 term: primary_expression .

    $default  reduce using rule 8 (term)


state 8

    4 line: error CR .

    $default  reduce using rule 4 (line)


state 9

    0 $accept: line_list $end .

    $default  accept


state 10

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


state 11

    6 expression: expression ADD . term

    DOUBLE_LITERAL  shift, and go to state 2

    term                go to state 16
    primary_expression  go to state 7


state 12

    7 expression: expression SUB . term

    DOUBLE_LITERAL  shift, and go to state 2

    term                go to state 17
    primary_expression  go to state 7


state 13

    3 line: expression CR .

    $default  reduce using rule 3 (line)


state 14

    9 term: term MUL . primary_expression

    DOUBLE_LITERAL  shift, and go to state 2

    primary_expression  go to state 18


state 15

   10 term: term DIV . primary_expression

    DOUBLE_LITERAL  shift, and go to state 2

    primary_expression  go to state 19


state 16

    6 expression: expression ADD term .
    9 term: term . MUL primary_expression
   10     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 6 (expression)


state 17

    7 expression: expression SUB term .
    9 term: term . MUL primary_expression
   10     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 7 (expression)


state 18

    9 term: term MUL primary_expression .

    $default  reduce using rule 9 (term)


state 19

   10 term: term DIV primary_expression .

    $default  reduce using rule 10 (term)
